--- a/src/navigation/config/config.yaml
+++ b/src/navigation/config/config.yaml
@@ -1,3 +1,3 @@
 navigator_client:
   ros__parameters:
-    endpoint_url: "http://127.0.0.1:80/get-img" 
+    endpoint_url: "http://192.168.1.153:2351/get-coords" 
